# katas

./: .gitignore  README.md  pyproject.toml  requirements.txt  show_light.txt
christmas-lights/: light_grid.py  main.py
christmas-lights/app/: light_grid.py  main.py
christmas-lights/tests/: tests.py
christmas_lights/: main.py
christmas_lights/app/: light_grid.py
christmas_lights/src/: light_grid.py
christmas_lights/tests/: tests.py
fizz_buzz/: main.py
fizz_buzz/src/: main.py
fizz_buzz/tests/: tests.py
